--- a/client/app/docs/page.mdx
+++ b/client/app/docs/page.mdx
@@ -1,5 +1,15 @@
 # Dabih Documentation
 
+## Start using dabih
+
+1. Sign In to dabih. [Account page](/account)
+   ![Sign in](/images/docs/sign_in.png)
+1. Generate your keypair and upload the public key to dabih.
+   ![Key](/images/docs/key_gen.png)
+1. **Keep your private key in a safe location**
+1. Wait for an admin to confirm your key.
+1. Upload and manage your data.
+
 ## General Concepts
 
 ### Encryption
