add releases in docs

--- a/client/app/docs/cli/page.mdx
+++ b/client/app/docs/cli/page.mdx
@@ -3,6 +3,11 @@
 Dabih is also available as a Command Line Tool on
 [crates.io](https://crates.io/crates/dabih)
 
+## Dabih CLI Binary
+
+We offer precomiled binaries for Windows and Linux on our Releases Page
+[Github Releases](https://github.com/spang-lab/dabih/releases)
+
 ## Prerequesites
 
 You will need the cargo package manager that is shipped with rust.
