--- a/client/app/docs/cli/page.mdx
+++ b/client/app/docs/cli/page.mdx
@@ -8,6 +8,12 @@ Dabih is also available as a Command Line Tool on
 We offer precomiled binaries for Windows and Linux on our Releases Page
 [Github Releases](https://github.com/spang-lab/dabih/releases)
 
+On linux you can run:
+```sh
+wget -qO- https://github.com/spang-lab/dabih/releases/download/v1.7.5/dabih-x86_64-unknown-linux-gnu.tar.gz | tar xvz
+```
+
+
 ## Prerequesites
 
 You will need the cargo package manager that is shipped with rust.
