--- a/client/app/docs/api/page.mdx
+++ b/client/app/docs/api/page.mdx
@@ -197,6 +197,36 @@ Returns the newly created dataset, with a new mnemonic.
 **Required Scopes**: _upload_
 
 **Description:**
+Add a new chunk of data to the upload **mnemonic**
+Chunks may be sent in parallel, and out of order.
+
+**Request:**
+
+**Note:** this request has type `multipart/form-data` instead of `application/json`, because this is the
+standard way to upload files.
+
+**Request Headers:**
+
+- `Digest`: `sha-256=<chunk hash>`
+- `Content-Range`: `bytes <chunk start>-<chunk end>/<file size>`
+- `Content-Type`: 'multipart/form-data'
+
+**Form data:**
+attach the chunk data, with any file name.
+
+**Response:**
+Returns the newly created or existing chunk.
+
+```json
+{
+  "id": "<number | numeric chunk id>",
+  "hash": "SHA-256 hash of the chunk",
+  "iv": "<AES initialization vector>",
+  "start": "<number | byte positon of the start of the chunk>",
+  "end": "<number | byte positon of the end of the chunk>",
+  "size": "<number | total size of the dataset>"
+}
+```
 
 ## POST `/upload/finish/:mnemonic`
 
@@ -207,6 +237,19 @@ Returns the newly created dataset, with a new mnemonic.
 - mnemonic: the ID of the dataset
 
 **Description:**
+Complete an upload, send the request after all chunks
+requests completed successfully.
+
+**Response:**
+
+Returns the full hash of the dataset, calculated form all the chunk hashes.
+If chunks are missing, will return an error.
+
+```json
+{
+  "hash": "<string | the hash of the dataset>"
+}
+```
 
 ## POST `/upload/cancel/:mnemonic`
 
@@ -218,18 +261,199 @@ Returns the newly created dataset, with a new mnemonic.
 
 **Description:**
 Cancel the upload for the mnemonic.
+Remove all the data that was uploaded already.
+
+## POST `/dataset/:mnemonic/download`
+
+**Required Scopes**: _api_
+
+**Parameters:**
+
+- mnemonic: the ID of the dataset
+
+**Request Body:**
+
+```json
+{
+  "key": "<string | the base64 encoded AES key for the dataset>"
+}
+```
+
+Generate a download token for a dataset.
+This will store the AES key of the dataset in the servers ephemeral storage
+and enable downloading using server decryption.
+
+**Response Body:**
+The access token used to download the dataset, only valid for 10 seconds and
+only for a single dataset.
+
+```json
+{
+  "token": "<string | the access token for the dataset download>"
+}
+```
 
 ## GET `/:mnemonic/download`
 
+**Use the special access token generated from `/dataset/:mnemonic/download`
+in the Authorization Header**
+
 Required Scopes: _download_
+
+**Parameters:**
+
+- mnemonic: the ID of the dataset
+
+**Description:**
+
+Download the decrypted dataset
+
+**Response:**
+
+Responds with the decrypted dataset as an attachment.
 
 ## POST `/dataset/search`
 
 **Required Scopes**: _api_
 
+**Description:**
+Search for datasets using a query, includes fuzzy matching.
+
+**Request Body:**
+
+```json
+{
+  "query": "<string/null | search string>",
+  "uploader": "<boolean/null | return only dataset uploaded by the user>",
+  "page": "<integer | return the nth page of results>",
+  "limit": "<string/null | limit the amount of results>",
+  "column": "<string/null | sort the results with this key>",
+  "direction": "<string /null|DESC(default) or ASC>",
+  "deleted": "<boolean | (admin only) also return deleted datasets>",
+  "all": "<boolean | (admin only) return all datasets, also those where the user is not a member>"
+}
+```
+
+**Response:**
+Returns a list of dataset and a total count of datasets matching the query.
+
+```json
+{
+  "count": <number | number of datasets that match the query>
+  "datasets":[
+    {
+      "id": "<number | numeric data set id>",
+      "mnemonic": "<string | dataset mnemonic id>",
+      "name": "<string | dataset tag>",
+      "fileName": "<string | the file name of the dataset>",
+      "permission": "<string | the permission the user has on the dataset>",
+      "path": "<string/null | the origial path of the file",
+      "hash": "<string | the hash of the dataset>",
+      "size": "<number | the size of the dataset, in bytes>",
+      "keyHash": "<string | the fingerprint of the AES key>",
+      "createdBy": "<the id of the user who uploaded the dataset>",
+      "validated": "<string | timestamp of last validation>",
+      "createdAt": "<string | creation timestamp>",
+      "updatedAt": "<string | timestamp of last change",
+      "deletedAt": "<string/null | if not null the timestamp when the dataset was removed",
+      "members": [{
+          "permission": "<string | permission level>",
+          "sub": "<string | user id>"
+      },...]
+    }, ...
+  ]
+}
+```
+
+## POST `/dataset/find`
+
+**Required Scopes**: _api_
+
+**Request Body:**
+
+```json
+{
+  "mnemonic": "<string/null | match on the mnemonic>"
+  "name": "<string/null | match the dataset tag>",
+  "fileName": "<string/null | the file name of the dataset>",
+  "hash": "<string/null | the hash of the dataset>",
+  ...
+}
+```
+
+**Description:**
+Find datasets using one of their keys. Only exact matches will be returned.
+
+**Response:**
+Returns a list of datasets matching the query key.
+Only returns datasets the user has access to.
+Will return removed datasets.
+
+```json
+{
+  "datasets":[
+    {
+      "id": "<number | numeric data set id>",
+      "mnemonic": "<string | dataset mnemonic id>",
+      "name": "<string | dataset tag>",
+      "fileName": "<string | the file name of the dataset>",
+      "permission": "<string | the permission the user has on the dataset>",
+      "path": "<string/null | the origial path of the file",
+      "hash": "<string | the hash of the dataset>",
+      "size": "<number | the size of the dataset, in bytes>",
+      "keyHash": "<string | the fingerprint of the AES key>",
+      "createdBy": "<the id of the user who uploaded the dataset>",
+      "validated": "<string | timestamp of last validation>",
+      "createdAt": "<string | creation timestamp>",
+      "updatedAt": "<string | timestamp of last change",
+      "deletedAt": "<string/null | if not null the timestamp when the dataset was removed",
+      "members": [{
+          "permission": "<string | permission level>",
+          "sub": "<string | user id>"
+      },...]
+    }, ...
+  ]
+}
+```
+
 ## GET `/dataset/:mnemonic`
 
 **Required Scopes**: _api_
+
+**Parameters:**
+
+- mnemonic: the ID of the dataset
+
+**Description:**
+Return dataset information and chunks.
+
+**Response:**
+
+```json
+{
+    "id": "<number | numeric data set id>",
+    "mnemonic": "<string | dataset mnemonic id>",
+    "name": "<string | dataset tag>",
+    "fileName": "<string | the file name of the dataset>",
+    "path": "<string/null | the origial path of the file",
+    "hash": "<string | the hash of the dataset>",
+    "size": "<number | the size of the dataset, in bytes>",
+    "keyHash": "<string | the fingerprint of the AES key>",
+    "createdBy": "<the id of the user who uploaded the dataset>",
+    "validated": "<string | timestamp of last validation>",
+    "createdAt": "<string | creation timestamp>",
+    "updatedAt": "<string | timestamp of last change",
+    "deletedAt": "<string/null | if not null the timestamp when the dataset was removed",
+    "chunks": [{
+      "id": "<number | numeric chunk id>",
+      "hash": "SHA-256 hash of the chunk",
+      "iv": "<AES initialization vector>",
+      "start": "<number | byte positon of the start of the chunk>",
+      "end": "<number | byte positon of the end of the chunk>",
+      "size": "<number | total size of the dataset>",
+    },...]
+}
+```
 
 ## GET `/dataset/:mnemonic/chunk/:chunkHash`
 
@@ -239,6 +463,14 @@ Required Scopes: _download_
 
 - mnemonic: the ID of the dataset
 - chunkHash: the base64url encoded SHA-256 hash of the chunk
+
+**Description:**
+
+Return the encrypted chunk of with the hash `chunkHash` from
+the dataset `mnemonic`
+
+**Response:**
+Chunk data, as an attachment.
 
 ## POST `/dataset/:mnemonic/remove`
 
@@ -253,7 +485,7 @@ Remove a dataset, this is a soft deletion and is reversible.
 
 ## POST `/dataset/:mnemonic/recover`
 
-**Required Scopes**: _api_
+**Required Scopes**: _admin_
 
 **Parameters:**
 
@@ -272,6 +504,8 @@ Recover a removed dataset, this will undo removal.
 
 **Description:**
 Permanently remove the dataset, it cannot be recovered.
+Only dataset that have been deleted for 24h can be destroyed.
+Admins may destroy datasets immediately.
 
 ## POST `/dataset/:mnemonic/member/add`
 
@@ -317,14 +551,6 @@ Re-encrypt the dataset, this will replace the symmetric AES key.
 **Description:**
 Set the name tag for the dataset.
 
-## POST `/dataset/:mnemonic/download`
-
-**Required Scopes**: _api_
-
-**Parameters:**
-
-- mnemonic: the ID of the dataset
-
 ## GET `/key/list`
 
 **Required Scopes**: _api_
@@ -356,3 +582,7 @@ Set the name tag for the dataset.
 ## POST `/token/remove`
 
 **Required Scopes**: _api_
+
+```
+
+```
